--- a/Style.css
+++ b/Style.css
@@ -9,6 +9,11 @@ body{
 font-family: 'Raleway';
 }
 
+.title_part{
+    font-size:1em;
+    font-weight: bold; 
+}
+
 /*Header*/
 .SiteHeader-title-nav{
     display: flex;
@@ -154,6 +159,35 @@ color: #0065FC;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/*section*/
+
+.display_main_container{
+    display: flex;
+}
+
+.main_container{
+
+}
+
+.background_part{
+    width: 90%;
+    height: 400px;
+    background-color: #F2F2F2;
+    border-radius: 10px;
+    font-weight: bold;
+    margin: 5px;
+}
+
+.block_activity{
+    widows: 10%;;
+    height: 200px;
+
+}
+
+.aside_style{
+    border:1px solid black;
 }
 
 
