--- a/Style.css
+++ b/Style.css
@@ -1,13 +1,10 @@
 /*Body*/
 
-html{
-    display: flex;
-    justify-content: center;
-    widows: 900px;
-}
+
 
 body{
-font-family: 'Raleway';
+    font-family: 'Raleway';
+    height: auto;
 }
 
 .title_part{
@@ -16,6 +13,11 @@ font-family: 'Raleway';
 }
 
 /*Header*/
+
+.SiteHeader{
+    margin-left: 32px;
+}
+
 .SiteHeader-title-nav{
     display: flex;
     justify-content: space-between;
@@ -47,10 +49,15 @@ color: #0065FC;
 
 .SiteHeader-nav a{
     text-decoration: none;
+    color: black;
+}
+#link_register{
+    color: #0065FC;
+    font-weight: bold;
 }
 
 .SiteHeader-nav a:hover{
-    color: #0065FC;
+    color:  #0065FC ;
 }
 
 .SiteHeader-h1{
@@ -65,6 +72,7 @@ color: #0065FC;
 .SiteHeader-search-btn{
     border-radius: 20px;
     display: flex;
+    margin-top: 20px;
 }
 
 .SiteHeader-search-input{
@@ -106,23 +114,28 @@ color: #0065FC;
     display: flex;
     align-items: center;
     font-weight: bold;
+    margin-top: 10px;
 }
 
 .FilterChoice{
     margin-left: 30px;
     border: 1px solid  #F2F2F2;
-    border-radius: 50px;
+    border-radius: 30px;
     display: flex;
     align-items: center;
 }
 
-.FilterChoice:hover{
+.FilterChoice:hover  {
     transition: 0,2s;
     background-color: #F2F2F2;
 }
 
+.circle-icon:hover{
+    color: blanchedalmond;
+}
+
 .elements-choice{
-    margin:0 15px;
+    margin: 10px;
 }
 
 .InformationResult{
@@ -136,9 +149,10 @@ color: #0065FC;
 
 /*Mise en forme des icon*/
 .circle-icon{
-    height: 30px;
-    width: 30px;
-    background-color: #F2F2F2;
+    height: 40px;
+    width: 40px;
+    margin-left: -1px;
+    background-color: #DEEBFF;
     border-radius: 50px;
     color:#0065FC;
     display: flex;
@@ -166,27 +180,213 @@ color: #0065FC;
 
 .display_main_container{
     display: flex;
+    justify-content: space-around;
+    width: 93%;
+    
 }
 
 .box_vignette{
     display: flex;
     justify-content: space-around;
     align-content: space-around;
-    flex-wrap: wrap;
-    border: 1px solid blue;
-    
+    flex-wrap: wrap;    
 }
 
 .section_vingette{
-    width: 680px;
-    height: 620px;
+    width: 650px;
+    height: 450px;
 }
 
+/* Vignette*/
 .vignette{
-    background-color: red;
+    box-shadow: 0px 2px 7px -2px #7894A3;
+}
+.vignette_text{
+    padding-top: 5px;
+    margin:0 -10px 0 0;
+    font-weight: lighter;
+}
+
+.vignette_title{
     width: 150px;
+    margin:0 -10px 0 0;
+}
+
+/*configuration vignette*/
+.vignette_hebergement {
+    width: 195px;
+    height: 180px;
+    border-radius: 10px;
+    border: 4px solid white;
+    display: flex;
+    align-items: flex-end;
+}
+
+/*image des différente vignette*/
+#img_vignette_img1{
+    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg?raw=true');
+    background-size: 255px;
+    background-position-y: 140%;
+    background-position-x: 0%;
+}
+
+#img_vignette_img2{
+    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg?raw=true');
+    background-size: 255px;
+    background-position-y: 0%;
+    background-position-x: 0%;
+    background-repeat: no-repeat;
+}
+
+/*zone de text*/
+.text_vignette_hebergement{
+    background-color: white;
+    width: 250px;
+    height: 76px;
+    border-radius: 0 0 5px 5px ;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-left: 10px;
+}
+
+/*mise en forme des étoile*/
+.list_etoile_hebergement{
+    height: 20px;
+    width:90px;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    padding: 0px;
+    margin:0px;
+}
+
+.etoile_vignette_bleu{
+    color: #0065FC; 
+}
+.etoile_vignette_grey{
+    color:#F2F2F2;
+}
+
+
+/* Vignette dans l'aside "populaire*/
+.vignette_aside_populaire{
+    list-style-type: none;
+    margin-left: -25px;
+}
+
+.vignette_populaire{
+    width: 335px;
+    height: 135px;
+    border-radius: 10px;
+    border: 4px solid white;
+    position: relative;
+}
+
+#img_vignette_img8{
+    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg?raw=true');
+    background-size: 170px;
+    background-position-y: 0%;
+    background-position-x: -30%;
+    background-repeat: no-repeat;
+}
+
+#img_vignette_img7{
+    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg?raw=true');
+    background-size: 190px;
+    background-position-y: 0%;
+    background-position-x: -30%;
+    background-repeat: no-repeat;
+}
+
+.text_vignette_populaire{
+    background-color: white;
+    width: 170px;
+    height: 110px;
+    border-radius: 0 0 5px 0px ;
+    display: flex;
+    flex-direction: column;
+    justify-self:flex-end;
+    padding-left: 10px;
+    position: absolute;
+    right: 0px;
+}
+
+.list_etoile_populaire{
+    height: 20px;
+    width:90px;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    padding: 0px;
+    margin-top: 25px;
+}
+
+
+
+/*Vignette des activités*/
+
+.vignette_activity_small{
+    width: 300px;
     height: 150px;
-    border: 1px solid black;
+    border-radius: 10px;
+    border: 4px solid white;
+    display: flex;
+    align-items: flex-end;
+}
+#img_vignette_img10{
+    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg?raw=true');
+    background-size: 300pX;
+    background-position-y: 0%;
+    background-position-x: -30%;
+    background-repeat: no-repeat;
+}
+
+.vignette_activity_medium{
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
+    border: 4px solid white;
+    display: flex;
+    align-items: flex-end;
+}
+#img_vignette_img11{
+    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg?raw=true');
+    background-size: 300pX;
+    background-position-y: 60%;
+    background-position-x: 0%;
+    background-repeat: no-repeat; 
+}
+
+.vignette_activity_big{
+    width: 300px;
+    height: 500px;
+    border-radius: 10px;
+    border: 4px solid white;
+    display: flex;
+    align-items: flex-end;
+}
+#img_vignette_img12{
+    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg?raw=true');
+    background-size: 800pX;
+    background-position-y: 0%;
+    background-position-x: 30%;
+    background-repeat: no-repeat;
+}
+
+.text_vignette_activity{
+    background-color: white;
+    width: 2000px;
+    height: 50px;
+    border-radius: 0 0 5px 5px ;
+    display: flex;
+    align-content:flex-end ;
+    padding-left: 10px;
+}
+
+.vignette_title_activity{
+    display: inline-flex;
+    align-items:center;
 }
 
 .background_part{ 
@@ -202,20 +402,34 @@ color: #0065FC;
 
 }
 
-.aside_style{
-    border:1px solid black;
-    width: 320px;
-    height: 620px;
+#link_box_vignette{
+    text-decoration: none;
+    color: black;
+    margin: 20px;
 }
 
-#link_box_vignette{
+/*Aside*/
+
+.aside_style{
+    width: 324px;
+    height: 450px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.title_aside{
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
 }
 
 /*Footer*/
 footer{
     background-color:  #F2F2F2;
- display: flex;
- justify-content:space-between;
+    width: 100%;
+    height: 220px;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
 }
 
 .Footer-block ul{
