--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,5 @@
 /*Body*/
 
-
-
 body{
     font-family: 'Raleway';
     height: auto;
@@ -10,7 +8,7 @@ body{
 .title_part{
     font-size:1em;
     font-weight: bold; 
-    margin-left: 20px;
+    margin-left: 30px;
 }
 
 /*Header*/
@@ -126,13 +124,13 @@ color: #0065FC;
     align-items: center;
 }
 
-.FilterChoice:hover  {
+.FilterChoice:hover {
     transition: 0,2s;
     background-color: #F2F2F2;
 }
 
 .circle-icon:hover{
-    color: blanchedalmond;
+    color: black;
 }
 
 .elements-choice{
@@ -316,84 +314,6 @@ color: #0065FC;
     color:#F2F2F2;
 }
 
-/*Vignette des activités*/
-
-.vignette_activity_small{
-    width: 300px;
-    height: 150px;
-    border-radius: 10px;
-    border: 4px solid white;
-    display: flex;
-    align-items: flex-end;
-}
-#img_vignette_img10{
-    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg?raw=true');
-    background-size: 300pX;
-    background-position-y: 0%;
-    background-position-x: -30%;
-    background-repeat: no-repeat;
-}
-
-.vignette_activity_medium{
-    width: 300px;
-    height: 200px;
-    border-radius: 10px;
-    border: 4px solid white;
-    display: flex;
-    align-items: flex-end;
-}
-#img_vignette_img11{
-    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg?raw=true');
-    background-size: 300pX;
-    background-position-y: 60%;
-    background-position-x: 0%;
-    background-repeat: no-repeat; 
-}
-
-.vignette_activity_big{
-    width: 300px;
-    height: 500px;
-    border-radius: 10px;
-    border: 4px solid white;
-    display: flex;
-    align-items: flex-end;
-}
-#img_vignette_img12{
-    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg?raw=true');
-    background-size: 800pX;
-    background-position-y: 0%;
-    background-position-x: 30%;
-    background-repeat: no-repeat;
-}
-
-.text_vignette_activity{
-    background-color: white;
-    width: 2000px;
-    height: 50px;
-    border-radius: 0 0 5px 5px ;
-    display: flex;
-    align-content:flex-end ;
-    padding-left: 10px;
-}
-
-.vignette_title_activity{
-    display: inline-flex;
-    align-items:center;
-}
-
-.background_part{ 
-    background-color: #F2F2F2;
-    border-radius: 10px;
-    font-weight: bold;
-    margin: 5px;
-}
-
-.block_activity{
-    widows: 10%;;
-    height: 200px;
-
-}
-
 #link_box_vignette{
     text-decoration: none;
     color: black;
@@ -477,6 +397,93 @@ color: #0065FC;
     list-style-type: none;
     padding: 0px;
     margin-top: 25px;
+}
+
+/* Séction des Activités*/
+
+.main_container_activity{
+    border: 1px solid  black;
+    display: flex;
+    height: auto;
+    width: auto;
+    margin:0 40px 40px 30px;
+}
+
+.block_activity{
+    border:1px solid black;
+    display: flex;
+}
+
+/*Vignette des activités*/
+
+.vignette_activity_small{
+    width: 300px;
+    height: 150px;
+    border-radius: 10px;
+    border: 4px solid white;
+    display: flex;
+    align-items: flex-end;
+}
+#img_vignette_img10{
+    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg?raw=true');
+    background-size: 300pX;
+    background-position-y: 0%;
+    background-position-x: -30%;
+    background-repeat: no-repeat;
+}
+
+.vignette_activity_medium{
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
+    border: 4px solid white;
+    display: flex;
+    align-items: flex-end;
+}
+#img_vignette_img11{
+    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg?raw=true');
+    background-size: 300pX;
+    background-position-y: 60%;
+    background-position-x: 0%;
+    background-repeat: no-repeat; 
+}
+
+.vignette_activity_big{
+    width: 300px;
+    height: 500px;
+    border-radius: 10px;
+    border: 4px solid white;
+    display: flex;
+    align-items: flex-end;
+}
+#img_vignette_img12{
+    background-image: url('https://github.com/AlexPYgit/AlexisPayet_2_20122020/blob/master/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg?raw=true');
+    background-size: 800pX;
+    background-position-y: 0%;
+    background-position-x: 30%;
+    background-repeat: no-repeat;
+}
+
+.text_vignette_activity{
+    background-color: white;
+    width: 2000px;
+    height: 50px;
+    border-radius: 0 0 5px 5px ;
+    display: flex;
+    align-content:flex-end ;
+    padding-left: 10px;
+}
+
+.vignette_title_activity{
+    display: inline-flex;
+    align-items:center;
+}
+
+.background_part{ 
+    background-color: #F2F2F2;
+    border-radius: 10px;
+    font-weight: bold;
+    margin: 5px;
 }
 
 /*Footer*/
