--- a/Style_grand_écran.css
+++ b/Style_grand_écran.css
@@ -1,7 +1,7 @@
 /*Règle d'affichage entre écran de 17" et 14" */
 
 /*pour les écran de 17"*/
-@media screen (max-width: 2000px)
+@media screen not (max-width : 1080px)
 {
         .SiteHeader{
             width: 80%;
@@ -10,7 +10,7 @@
     }
 
     /*pour les écran en 14"*/
-    @media screen and (min-width:1024px)
+    @media screen and (max-width:1024px)
     {
         
             .SiteHeader{
