--- a/Style_grand_écran.css
+++ b/Style_grand_écran.css
@@ -1,11 +1,22 @@
 /*Règle d'affichage entre écran de 17" et 14" */
 
 /*pour les écran de 17"*/
-@media screen not (max-width : 1080px)
+@media screen and (max-width : 1920px)
 {
         .SiteHeader{
             width: 80%;
             margin: 0 10% 0 10%;
+        }
+        .display_main_container{
+            width: 80%;
+            margin: 0 10% 0 10%;
+        }
+        .main_container_activity{
+            width: 80%;
+            margin: 0 10% 3% 10%;
+        }
+        .title_part{ 
+            margin-left: 10%;
         }
     }
 
@@ -16,5 +27,16 @@
             .SiteHeader{
                 width: 94%;
                 margin: 0 2% 0 2%;
+            }
+            .display_main_container{
+                width: 94%;
+                margin: 0 2% 0 2%;
+            }
+            .main_container_activity{
+                width: 94%;
+                margin: 0 2% 3% 2%;
+            }
+            .title_part{ 
+                margin-left: 2%;
             }
         }
