--- a/Style.css
+++ b/Style.css
@@ -521,6 +521,7 @@ footer{
     display: flex;
     justify-content:space-between;
     align-items: center;
+    overflow: hidden;
 }
 
 .Footer-block ul{
