--- a/Style_smartphone.css
+++ b/Style_smartphone.css
@@ -21,10 +21,40 @@
     }
 
     .SiteHeader-title-nav{
-        border: 1px solid black;
+        border: 1px solid red;
         display: flex;
         flex-wrap: nowrap;
         flex-direction: column;
+    }
+
+    .SiteHeader-nav ul{
+        display: block;
+
+        border: 1px solid black;
+    }
+
+    .InformationResult{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .InformationResult p{
+        position: relative;
+    }
+
+    /*Filter*/
+
+    .Filter{
+        border: 1px solid black;
+        display: block;
+        flex-wrap: wrap;
+    }
+
+    .FilterChoice{
+        float:left;
+        margin: none;
+        border: 1px solid black;
+
     }
 
 /*Section vignette*/
@@ -32,6 +62,8 @@
         display: flex;
         flex-direction: column-reverse;
         background-color: none;
+        float: left;
+        overflow:auto;
     }
 
     .box_vignette{
