--- a/smartphone-first/style.css
+++ b/smartphone-first/style.css
@@ -14,7 +14,6 @@ body{
 
 .SiteHeader-title{
     width: 80%;
-    border: 1px solid black;
 }
 
 .en-tête{
@@ -108,6 +107,9 @@ body{
     flex-flow:column wrap;
     height: 200px;
 }
+.order{
+    order: 1;
+}
 
 .FilterChoice{
     border: 1px solid  #F2F2F2;
@@ -158,4 +160,25 @@ body{
     display: flex;
     justify-content: center;
     align-items:center;
+}
+
+/*Footer*/
+.footer{
+    display: flex;
+    flex-direction: column;
+    background-color:#F2F2F2 ;
+}
+
+.Footer-block li {
+    list-style-type: none;
+    line-height: 2em;
+}
+
+.Footer-block li a{
+    color: black;
+    text-decoration: none;
+}
+
+.Footer-block-hide{
+    display: none;
 }
