--- a/smartphone-first/Style-descktop.css
+++ b/smartphone-first/Style-descktop.css
@@ -45,6 +45,12 @@
         font-size: 0.85em;
     }
    
+    /*Button*/
+    #ico_btn_search{
+        display: none;
+    }
+
+    /*Filter */
     .Filter{
         display: flex;
         align-items: center;
