--- a/smartphone-first/style.css
+++ b/smartphone-first/style.css
@@ -165,6 +165,43 @@ body{
     align-items:center;
 }
 
+/*ASIDE*/
+.aside{
+    padding: 5%;
+    background-color: #F2F2F2;
+}
+
+.title_aside{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cards_populaires{
+    display: flex;
+    background-color: white;
+    border-radius: 10px;
+    border: 5px solid white;
+    margin: 10%  0 10% 0;
+    height: 150px;
+}
+
+.img_populaires{
+    width: 30%;
+    border-radius: 10px 0 0 10px;
+    border: px solid black;
+    box-sizing: content-box;
+}
+
+.text_populaires{
+    display: flex;
+    justify-content: left;
+    border: 1px solid black;
+    width: 70%;
+}
+
+
+
 /*Footer*/
 .footer{
     display: flex;
