création des cards populaires

--- a/smartphone-first/Style-descktop.css
+++ b/smartphone-first/Style-descktop.css
@@ -55,8 +55,9 @@
 
     /*ASIDE*/
     .aside{
+        padding: 2%;
         border-radius: 10px;
-        width: 30%;
+        width: 25%;
     }
 
     /*Filter */
