--- a/smartphone-first/style.css
+++ b/smartphone-first/style.css
@@ -183,21 +183,38 @@ body{
     border-radius: 10px;
     border: 5px solid white;
     margin: 10%  0 10% 0;
-    height: 150px;
+    height: 90%;
 }
 
 .img_populaires{
-    width: 30%;
+    width: 40%;
     border-radius: 10px 0 0 10px;
-    border: px solid black;
-    box-sizing: content-box;
+    background-position: center;
+    background-size:  cover;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+    border: 1px solid black;
+
 }
 
 .text_populaires{
     display: flex;
     justify-content: left;
+    flex-direction: column;
+    align-content: ;
+    width: 60%;
+    padding:0 5%;
     border: 1px solid black;
-    width: 70%;
+}
+
+.text_populaires h3 {
+    border: 1px solid black;
+}
+.text_populaires p {
+    border: 1px solid black;
+}
+
+
 }
 
 
